fix: add scrollbar to TOC

--- a/themes/flatcar/assets/scss/sections/section-docs.scss
+++ b/themes/flatcar/assets/scss/sections/section-docs.scss
@@ -294,6 +294,8 @@ $sideBarWidth: 350px;
   top: 5rem;
   font-size: 1rem;
   border-left: 1px dotted #dee2e6;
+  overflow-y: scroll;
+  height: calc(100vh - 5rem);
 
   ul, ol {
     list-style: none;
